[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specieval"
version = "0.1.0"
description = "Evaluating LLM attitudes towards animals, based on Hopwood et al., 2025"
readme = "README.md"
requires-python = ">=3.12.4"
license = {text = "MIT"}
authors = [
    {name = "Dan Wahl", email = "hi@danwahl.net"}
]
dependencies = [
    "inspect-ai",
    "openai",
    "pandas",
    "textual==3.1.1",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "ruff",
]

[project.scripts]
specieval = "specieval.runner:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools]
package-data = {"specieval" = ["translations/data/*.csv"]}
