[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specieval"
version = "0.1.0"
description = "Evaluating LLM attitudes towards animals, based on Hopwood et al., 2025"
readme = "README.md"
requires-python = ">=3.12.4"
license = {text = "MIT"}
authors = [
    {name = "Dan Wahl", email = "hi@danwahl.net"}
]
dependencies = [
    "inspect-ai>=0.3.158",
    "openai>=2.8.0",
    "pandas",
    "textual>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "mypy>=1.0",
    "pre-commit>=3.5.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff",
    "tabulate",
]

[project.scripts]
specieval = "specieval.runner:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools]
package-data = {"specieval" = ["translations/data/*.csv"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false

[project.entry-points.inspect_ai]
specieval = "specieval.tasks"
